<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".FeedbackActivity">

    <LinearLayout
        android:id="@+id/status_layout"
        android:background="@drawable/rounded_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/status_label"
            android:textColor="@color/md_black_1000"/>

        <Spinner
            android:id="@+id/status_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/feedback_layout"
        android:background="@drawable/rounded_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/feedback_label"
            android:textColor="@color/md_black_1000"/>

        <EditText
            android:id="@+id/et_feedback"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/feedback_hint"
            android:inputType="textMultiLine"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatButton
            style="?attr/buttonBarPositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/red_logo"
            android:id="@+id/cancel_button"
            android:text="@string/cancel_label" />
        <android.support.v7.widget.AppCompatButton
            style="?attr/buttonBarPositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textColor="@color/red_logo"
            android:id="@+id/submit_button"
            android:text="@string/submit_label" />
    </LinearLayout>


</LinearLayout>