<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/root_layout"
    tools:context="com.swg.jalinatm.TicketDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolbarStyle">
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/ticket_details_page_name"
            android:textSize="22sp"
            android:textAppearance="@android:style/TextAppearance.WindowTitle"
            android:visibility="visible"/>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ticket_summary"
                android:background="@drawable/rounded_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:text="@string/no_ticket"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:gravity="center"
                        android:text=":"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/tv_ticket"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="50"
                        android:textSize="18sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:text="@string/atm_id"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:gravity="center"
                        android:text=":"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/tv_atmid"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="50"
                        android:textSize="18sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:text="@string/code_label"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:gravity="center"
                        android:text=":"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/tv_summary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="50"
                        android:textSize="18sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:text="@string/problem_desc"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:gravity="center"
                        android:text=":"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/tv_problem"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="50"
                        android:textSize="18sp"/>
                </LinearLayout>


            </LinearLayout>

            <!--<LinearLayout
                android:id="@+id/notes_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical"
                android:background="@drawable/rounded_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notes"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_notes"
                        android:layout_height="wrap_content"
                        android:hint="@string/notes_hint"
                        android:inputType="textMultiLine"
                        android:background="@android:color/transparent"
                        android:layout_width="match_parent">
                    </EditText>
                </LinearLayout>
            </LinearLayout>-->

            <LinearLayout
                android:id="@+id/location_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical"
                android:background="@drawable/rounded_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/atm_location"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <fragment
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:id="@+id/map"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:id="@+id/tv_address"
                        android:text="@string/address"
                        android:layout_gravity="center"
                        android:textAlignment="center"/>

                    <!--<com.google.android.gms.maps.MapView
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_gravity="center"/>-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp">
                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/btn_open_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_layout_without_stroke_blue"
                            android:textColor="@color/white"
                            android:padding="10dp"
                            android:text="@string/open_maps"/>
                        <!--<View
                            android:layout_width="0dp"
                            android:id="@+id/gap_location"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"/>
                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/btn_update_location"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="45"
                            android:background="@drawable/rounded_layout_without_stroke_blue"
                            android:textColor="@color/white"
                            android:text="@string/update_location"/>-->
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:weightSum="100"
                    android:id="@+id/layout_accept_reject_finish"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_accept"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="12dp"
                        android:layout_weight="45"
                        android:background="@drawable/rounded_layout_without_stroke"
                        android:textColor="@color/white"
                        android:text="@string/accept"/>

                    <View
                        android:layout_width="0dp"
                        android:id="@+id/gap"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"/>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_reject_finish"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="12dp"
                        android:layout_weight="45"
                        android:background="@drawable/rounded_layout_without_stroke"
                        android:textColor="@color/white"
                        android:text="@string/reject"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>

